5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/4328/executions/1643_2704.log
== TEST (2019-04-15 13:26:13) 
-- CODE:
nota = float(input())
bonificacao = (input())

if (bonificacao == S):
	print(nota + (0,1*nota))
else:
	print(nota)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    if (bonificacao == S):
NameError: name 'S' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 13:26:45) 
-- CODE:
nota = float(input())
bonificacao = (input())

if (bonificacao == S):
	print(nota + (0,1*nota))
else:
	print(nota)
	
-- EXECUTION TIME:
0.213283
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1643/2704/main.py", line 4, in <module>
    if (bonificacao == S):
NameError: name 'S' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 19:00:49) 
-- CODE:
nota = float(input())
bonificacao = (input())

if (bonificacao == S):
	print(nota + (0,1*nota))
else:
	print(nota)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    if (bonificacao == S):
NameError: name 'S' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-17 19:24:39) 
-- CODE:
nota = float(input())
bonificacao = (input())

if (bonificacao == S):
	print(nota + (0,1*nota))
else:
	print(nota)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    if (bonificacao == S):
NameError: name 'S' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
